// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vault Deposit can go back from full fees descriptions 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root-6"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-21"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-9 MuiDialog-scrollPaper-7"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root-23 MuiDialog-paper-10 MuiDialog-paperScrollPaper-11 MuiDialog-paperWidthXl-18 MuiDialog-paperFullWidth-19 MuiPaper-elevation24-50 MuiPaper-rounded-24"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-359 makeStyles-root-355"
        >
          <h2
            class="MuiTypography-root-56 MuiTypography-h6-66"
          >
            <div
              class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-align-items-xs-center-95"
            >
              <div
                class="MuiGrid-root-86 makeStyles-logoContainer-358 MuiGrid-item-88"
              >
                <div
                  class="makeStyles-root-360"
                >
                  <img
                    alt="curve-renBTC-wBTC-sBTC logo"
                    class="makeStyles-position-361"
                    src="/assets/icons/curve-renbtc-wbtc-sbtc.svg"
                  />
                </div>
              </div>
              <div
                class="MuiGrid-root-86 MuiGrid-item-88"
              >
                <p
                  class="MuiTypography-root-56 makeStyles-mode-356 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82"
                >
                  Deposit
                </p>
                <p
                  class="MuiTypography-root-56 MuiTypography-body1-58 MuiTypography-colorTextPrimary-81"
                >
                  Curve.fi renBTC/wBTC/sBTC
                </p>
              </div>
            </div>
          </h2>
        </div>
        <div
          class="MuiDialogContent-root-362 makeStyles-content-1 MuiDialogContent-dividers-363"
        >
          <div
            class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-align-items-xs-center-95"
          >
            <div
              class="MuiGrid-root-86 MuiGrid-item-88 MuiGrid-grid-xs-12-132 MuiGrid-grid-sm-6-140"
            >
              <p
                class="MuiTypography-root-56 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82"
              >
                Available: 0.0
              </p>
            </div>
            <div
              class="MuiGrid-root-86 WithStyles(ForwardRef(Grid))-root-364 WithStyles(ForwardRef(Grid))-root-365 MuiGrid-item-88 MuiGrid-grid-xs-12-132 MuiGrid-grid-sm-6-140"
            >
              <div
                class="MuiButtonGroup-root-367"
                role="group"
              >
                <button
                  aria-label="25%"
                  class="MuiButtonBase-root-249 MuiButton-root-220 MuiButton-outlined-225 MuiButtonGroup-grouped-373 MuiButtonGroup-groupedHorizontal-374 MuiButtonGroup-groupedOutlined-381 MuiButtonGroup-groupedOutlinedHorizontal-382 MuiButtonGroup-groupedOutlined-381 makeStyles-button-366 MuiButton-outlinedSizeSmall-237 MuiButton-sizeSmall-241"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-221"
                  >
                    25
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-454"
                  />
                </button>
                <button
                  aria-label="50%"
                  class="MuiButtonBase-root-249 MuiButton-root-220 MuiButton-outlined-225 MuiButtonGroup-grouped-373 MuiButtonGroup-groupedHorizontal-374 MuiButtonGroup-groupedOutlined-381 MuiButtonGroup-groupedOutlinedHorizontal-382 MuiButtonGroup-groupedOutlined-381 makeStyles-button-366 MuiButton-outlinedSizeSmall-237 MuiButton-sizeSmall-241"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-221"
                  >
                    50
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-454"
                  />
                </button>
                <button
                  aria-label="75%"
                  class="MuiButtonBase-root-249 MuiButton-root-220 MuiButton-outlined-225 MuiButtonGroup-grouped-373 MuiButtonGroup-groupedHorizontal-374 MuiButtonGroup-groupedOutlined-381 MuiButtonGroup-groupedOutlinedHorizontal-382 MuiButtonGroup-groupedOutlined-381 makeStyles-button-366 MuiButton-outlinedSizeSmall-237 MuiButton-sizeSmall-241"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-221"
                  >
                    75
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-454"
                  />
                </button>
                <button
                  aria-label="100%"
                  class="MuiButtonBase-root-249 MuiButton-root-220 MuiButton-outlined-225 MuiButtonGroup-grouped-373 MuiButtonGroup-groupedHorizontal-374 MuiButtonGroup-groupedOutlined-381 MuiButtonGroup-groupedOutlinedHorizontal-382 MuiButtonGroup-groupedOutlined-381 makeStyles-button-366 MuiButton-outlinedSizeSmall-237 MuiButton-sizeSmall-241"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-221"
                  >
                    100
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-454"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            class="MuiFormControl-root-394 MuiTextField-root-393 WithStyles(ForwardRef(TextField))-root-391 WithStyles(ForwardRef(TextField))-root-392 MuiFormControl-fullWidth-397"
          >
            <div
              class="MuiInputBase-root-413 MuiOutlinedInput-root-398 MuiInputBase-fullWidth-423 MuiInputBase-formControl-414"
            >
              <input
                aria-invalid="false"
                autocomplete="off"
                class="MuiInputBase-input-424 MuiOutlinedInput-input-408"
                inputmode="decimal"
                maxlength="79"
                minlength="1"
                pattern="^[0-9]*[.,]?[0-9]*$"
                placeholder="Type an amount to deposit"
                spellcheck="false"
                style="text-align: right;"
                type="text"
                value="0"
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-431 MuiOutlinedInput-notchedOutline-407"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-432"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="makeStyles-fees-3"
          >
            <div
              class="makeStyles-titleContainer-437"
            >
              <p
                class="MuiTypography-root-56 MuiTypography-body1-58"
              >
                Fees
              </p>
              <svg
                aria-hidden="true"
                aria-label="see fees descriptions"
                class="MuiSvgIcon-root-312 makeStyles-helpIcon-439 MuiSvgIcon-colorPrimary-313"
                focusable="false"
                title="Click to see full description"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
                />
              </svg>
            </div>
            <hr
              class="MuiDivider-root-321 makeStyles-divider-436"
            />
            <div
              class="MuiGrid-root-86 MuiGrid-container-87"
            >
              <div
                class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-justify-content-xs-space-between-106"
              >
                <p
                  class="MuiTypography-root-56 makeStyles-specName-451 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82 MuiTypography-displayInline-84"
                >
                  Performance Fee
                </p>
                <h6
                  class="MuiTypography-root-56 MuiTypography-subtitle2-68 MuiTypography-displayInline-84"
                >
                  0.2%
                </h6>
              </div>
              <div
                class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-justify-content-xs-space-between-106"
              >
                <p
                  class="MuiTypography-root-56 makeStyles-specName-451 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82 MuiTypography-displayInline-84"
                >
                  Strategist Performance Fee
                </p>
                <h6
                  class="MuiTypography-root-56 MuiTypography-subtitle2-68 MuiTypography-displayInline-84"
                >
                  0.1%
                </h6>
              </div>
              <div
                class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-justify-content-xs-space-between-106"
              >
                <p
                  class="MuiTypography-root-56 makeStyles-specName-451 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82 MuiTypography-displayInline-84"
                >
                  Withdraw Fee
                </p>
                <h6
                  class="MuiTypography-root-56 MuiTypography-subtitle2-68 MuiTypography-displayInline-84"
                >
                  0.5%
                </h6>
              </div>
            </div>
          </div>
          <button
            aria-label="Deposit"
            class="MuiButtonBase-root-249 MuiButton-root-220 MuiButton-contained-228 WithStyles(ForwardRef(Button))-root-452 WithStyles(ForwardRef(Button))-root-453 MuiButton-containedPrimary-229 MuiButton-containedSizeLarge-240 MuiButton-sizeLarge-242 MuiButton-disabled-233 MuiButton-fullWidth-243 MuiButtonBase-disabled-250"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-221"
            >
              Deposit
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Vault Deposit can see full fees descriptions 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root-6"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-21"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-9 MuiDialog-scrollPaper-7"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root-23 MuiDialog-paper-10 MuiDialog-paperScrollPaper-11 MuiDialog-paperWidthXl-18 MuiDialog-paperFullWidth-19 MuiPaper-elevation24-50 MuiPaper-rounded-24"
        role="dialog"
      >
        <div
          class="MuiGrid-root-86 makeStyles-root-341 MuiGrid-container-87"
        >
          <div
            class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-align-items-xs-center-95 MuiGrid-justify-content-xs-space-between-106"
          >
            <p
              class="MuiTypography-root-56 makeStyles-title-342 MuiTypography-body1-58 MuiTypography-displayInline-84"
            >
              Fee Information
            </p>
            <button
              class="MuiButtonBase-root-249 MuiButton-root-220 MuiButton-text-222 makeStyles-backButton-4 MuiButton-textPrimary-223"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-221"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-312 makeStyles-arrowIcon-5"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.01 11H4v2h12.01v3L20 12l-3.99-4z"
                  />
                </svg>
                Back
              </span>
              <span
                class="MuiTouchRipple-root-345"
              />
            </button>
          </div>
          <div
            class="makeStyles-content-343"
          >
            <p
              class="MuiTypography-root-56 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82"
            >
              Fees are charged on certain Sett Vaults, and are sent to the BadgerDAO treasury, or shared with the strategist who wrote the vault strategy.
            </p>
            <hr
              class="MuiDivider-root-321 makeStyles-divider-344"
            />
            <div>
              <p
                class="MuiTypography-root-56 MuiTypography-body2-57 MuiTypography-colorTextSecondary-82"
              >
                - Performance Fees are assessed on the profit that the strategy creates
              </p>
              <p
                class="MuiTypography-root-56 MuiTypography-body2-57 MuiTypography-colorTextSecondary-82"
              >
                - Management Fees are charged on the entire principal over the course of a year
              </p>
              <p
                class="MuiTypography-root-56 MuiTypography-body2-57 MuiTypography-colorTextSecondary-82"
              >
                - Both Performance and Management Fees are factored into all ROI calculations
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Vault Deposit displays sett information 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root-13"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-28"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-16 MuiDialog-scrollPaper-14"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root-30 MuiDialog-paper-17 MuiDialog-paperScrollPaper-18 MuiDialog-paperWidthXl-25 MuiDialog-paperFullWidth-26 MuiPaper-elevation24-57 MuiPaper-rounded-31"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-62 makeStyles-root-58"
        >
          <h2
            class="MuiTypography-root-63 MuiTypography-h6-73"
          >
            <div
              class="MuiGrid-root-93 MuiGrid-container-94 MuiGrid-align-items-xs-center-102"
            >
              <div
                class="MuiGrid-root-93 MuiGrid-item-95 MuiGrid-grid-xs-6-133"
              >
                <p
                  class="MuiTypography-root-63 makeStyles-mode-59 MuiTypography-body1-65 MuiTypography-colorTextSecondary-89"
                >
                  Deposit
                </p>
              </div>
              <div
                class="MuiGrid-root-93 MuiGrid-item-95 MuiGrid-grid-xs-6-133"
              >
                <div
                  class="MuiBox-root-196 MuiBox-root-197"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-198 makeStyles-closeIcon-61"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </h2>
        </div>
        <div
          class="MuiDialogContent-root-207 makeStyles-content-1"
        >
          <div
            class="MuiBox-root-196 MuiBox-root-209 makeStyles-tokenBox-12"
          >
            <p
              class="MuiTypography-root-63 token-label MuiTypography-body1-65"
            >
              Token
            </p>
            <div
              class="MuiGrid-root-93 MuiGrid-container-94"
            >
              <div
                class="MuiGrid-root-93 MuiGrid-item-95 MuiGrid-grid-xs-12-139 MuiGrid-grid-sm-7-148"
              >
                <div
                  class="MuiBox-root-196 MuiBox-root-210 token-logo-name"
                >
                  <div
                    class="makeStyles-root-211"
                  >
                    <img
                      alt="BBTC logo"
                      class="makeStyles-position-212"
                      src="/assets/icons/bbtc.svg"
                    />
                    <img
                      alt="crvRenWSBTC logo"
                      class="makeStyles-position-213"
                      src="/assets/icons/crvrenwsbtc.svg"
                    />
                  </div>
                  <p
                    class="MuiTypography-root-63 token-name MuiTypography-body1-65"
                  >
                    bBTC
                  </p>
                </div>
              </div>
              <div
                class="MuiGrid-root-93 MuiGrid-item-95 MuiGrid-grid-xs-12-139 MuiGrid-grid-sm-5-146"
              >
                <div
                  class="MuiFormControl-root-215 MuiTextField-root-214 makeStyles-amountTextField-6  MuiFormControl-fullWidth-218"
                >
                  <div
                    class="MuiInputBase-root-234 MuiOutlinedInput-root-219 MuiInputBase-fullWidth-244 MuiInputBase-formControl-235"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input-245 MuiOutlinedInput-input-229"
                      inputmode="decimal"
                      maxlength="79"
                      minlength="1"
                      pattern="^[0-9]*[.,]?[0-9]*$"
                      placeholder="Type an amount to deposit"
                      spellcheck="false"
                      style="text-align: right;"
                      type="text"
                      value="0"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-252 MuiOutlinedInput-notchedOutline-228"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-253"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
                <div
                  class="MuiBox-root-196 MuiBox-root-256 makeStyles-amountDollarValue-8"
                >
                  <p
                    class="MuiTypography-root-63 MuiTypography-body1-65"
                  >
                    ~$
                    0.00
                  </p>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-93 token-balance-percentage MuiGrid-container-94 MuiGrid-align-items-xs-center-102"
            >
              <div
                class="MuiGrid-root-93 MuiGrid-item-95 MuiGrid-grid-xs-12-139 MuiGrid-grid-sm-6-147"
              >
                <p
                  class="MuiTypography-root-63 token-balance MuiTypography-body1-65 MuiTypography-colorTextSecondary-89"
                >
                  Balance: 0.0
                </p>
              </div>
              <div
                class="MuiGrid-root-93 WithStyles(ForwardRef(Grid))-root-257 WithStyles(ForwardRef(Grid))-root-258 MuiGrid-item-95 MuiGrid-grid-xs-12-139 MuiGrid-grid-sm-6-147"
              >
                <div
                  class="MuiButtonGroup-root-260"
                  role="group"
                >
                  <button
                    aria-label="25%"
                    class="MuiButtonBase-root-313 MuiButton-root-284 MuiButton-outlined-289 MuiButtonGroup-grouped-266 MuiButtonGroup-groupedHorizontal-267 MuiButtonGroup-groupedOutlined-274 MuiButtonGroup-groupedOutlinedHorizontal-275 MuiButtonGroup-groupedOutlined-274 makeStyles-button-259 MuiButton-outlinedSizeSmall-301 MuiButton-sizeSmall-305"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-285"
                    >
                      25
                      %
                    </span>
                    <span
                      class="MuiTouchRipple-root-340"
                    />
                  </button>
                  <button
                    aria-label="50%"
                    class="MuiButtonBase-root-313 MuiButton-root-284 MuiButton-outlined-289 MuiButtonGroup-grouped-266 MuiButtonGroup-groupedHorizontal-267 MuiButtonGroup-groupedOutlined-274 MuiButtonGroup-groupedOutlinedHorizontal-275 MuiButtonGroup-groupedOutlined-274 makeStyles-button-259 MuiButton-outlinedSizeSmall-301 MuiButton-sizeSmall-305"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-285"
                    >
                      50
                      %
                    </span>
                    <span
                      class="MuiTouchRipple-root-340"
                    />
                  </button>
                  <button
                    aria-label="75%"
                    class="MuiButtonBase-root-313 MuiButton-root-284 MuiButton-outlined-289 MuiButtonGroup-grouped-266 MuiButtonGroup-groupedHorizontal-267 MuiButtonGroup-groupedOutlined-274 MuiButtonGroup-groupedOutlinedHorizontal-275 MuiButtonGroup-groupedOutlined-274 makeStyles-button-259 MuiButton-outlinedSizeSmall-301 MuiButton-sizeSmall-305"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-285"
                    >
                      75
                      %
                    </span>
                    <span
                      class="MuiTouchRipple-root-340"
                    />
                  </button>
                  <button
                    aria-label="100%"
                    class="MuiButtonBase-root-313 MuiButton-root-284 MuiButton-outlined-289 MuiButtonGroup-grouped-266 MuiButtonGroup-groupedHorizontal-267 MuiButtonGroup-groupedOutlined-274 MuiButtonGroup-groupedOutlinedHorizontal-275 MuiButtonGroup-groupedOutlined-274 makeStyles-button-259 MuiButton-outlinedSizeSmall-301 MuiButton-sizeSmall-305"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-285"
                    >
                      100
                      %
                    </span>
                    <span
                      class="MuiTouchRipple-root-340"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-fees-3"
          >
            <div
              class="MuiGrid-root-93 MuiGrid-container-94"
            >
              <div
                class="MuiGrid-root-93 makeStyles-feeRow-320 MuiGrid-container-94 MuiGrid-justify-content-xs-space-between-113"
              >
                <div
                  class="MuiBox-root-196 MuiBox-root-321"
                >
                  <span
                    class="MuiTypography-root-63 makeStyles-specName-318 MuiTypography-body1-65 MuiTypography-colorTextSecondary-89"
                  >
                    Performance Fee
                     
                  </span>
                  <svg
                    aria-hidden="true"
                    aria-label="see fees descriptions"
                    class="MuiSvgIcon-root-198 makeStyles-helpIcon-319 MuiSvgIcon-colorPrimary-199"
                    focusable="false"
                    title="Click to see full description"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
                    />
                  </svg>
                </div>
                <h6
                  class="MuiTypography-root-63 MuiTypography-subtitle2-75 MuiTypography-displayInline-91"
                >
                  20%
                </h6>
              </div>
              <div
                class="MuiGrid-root-93 makeStyles-feeRow-320 MuiGrid-container-94 MuiGrid-justify-content-xs-space-between-113"
              >
                <div
                  class="MuiBox-root-196 MuiBox-root-333"
                >
                  <span
                    class="MuiTypography-root-63 makeStyles-specName-318 MuiTypography-body1-65 MuiTypography-colorTextSecondary-89"
                  >
                    Withdraw Fee
                     
                  </span>
                  <svg
                    aria-hidden="true"
                    aria-label="see fees descriptions"
                    class="MuiSvgIcon-root-198 makeStyles-helpIcon-319 MuiSvgIcon-colorPrimary-199"
                    focusable="false"
                    title="Click to see full description"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
                    />
                  </svg>
                </div>
                <h6
                  class="MuiTypography-root-63 MuiTypography-subtitle2-75 MuiTypography-displayInline-91"
                >
                  0.1%
                </h6>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root-93 makeStyles-totalAmountContainer-9 MuiGrid-container-94"
          >
            <div
              class="MuiGrid-root-93 MuiGrid-item-95 MuiGrid-grid-xs-6-133"
            >
              <div
                class="MuiBox-root-196 MuiBox-root-334 makeStyles-totalAmountLabel-10"
              >
                Total Deposit
              </div>
            </div>
            <div
              class="MuiGrid-root-93 MuiGrid-item-95 MuiGrid-grid-xs-6-133"
            >
              <div
                class="MuiBox-root-196 MuiBox-root-335 makeStyles-totalAmount-11"
              >
                0
              </div>
            </div>
          </div>
          <button
            aria-label="Deposit"
            class="MuiButtonBase-root-313 MuiButton-root-284 MuiButton-contained-292 WithStyles(ForwardRef(Button))-root-338 WithStyles(ForwardRef(Button))-root-339 Styled(WithStyles(ForwardRef(Button)))-root-336 Styled(WithStyles(ForwardRef(Button)))-root-337 MuiButton-containedPrimary-293 MuiButton-containedSizeLarge-304 MuiButton-sizeLarge-306 MuiButton-disabled-297 MuiButton-fullWidth-307 MuiButtonBase-disabled-314"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-285"
            >
              DEPOSIT bBTC/sbtcCRV
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;
